# Chatbot-test-center

./: LICENSE  README.md  chat_memory.json  config.json  config.py  controller.py  main.py  model.py  pyproject.toml  view.py
Data/: chat_memory.json  text_field0  text_field1
