[project]
name = "chatbot-gui"
version = "0.1.0"
description = "Ein lokal laufender Chatbot mit grafischer Oberfläche (Tkinter) und Ollama-Anbindung"
readme = "README.md"
authors = [
    { name = "Artur Lamparter", email = "arturlamparter@web.de" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests >=2.25.1"
]

[tool.setuptools]
packages = ["chatbot"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
